--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,25 +1,11 @@
-# frontend/nginx.conf
 server {
-    listen 80;
-    server_name localhost;
+  listen 8080;
+  server_name _;
 
-    # Root directory for static files
-    root /usr/share/nginx/html;
-    index index.html;
+  root /usr/share/nginx/html;
+  index index.html;
 
-    # Configuration for serving React app static files
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Proxy API requests to the backend service
-    # The 'backend' hostname will be resolved via Docker's internal DNS
-    # VITE_API_BASE_URL is configured in .env and App.tsx to hit /api/v1
-    location /api/v1/ {
-        proxy_pass http://backend:8000/api/v1/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  location / {
+    try_files $uri /index.html;
+  }
 }
