--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         python-version: '3.13'
     - name: Install backend dependencies
+      env:
+        DATABASE_URL: postgresql://user:password@localhost:5432/testdb # Dummy URL for CI
       run: |
         python -m pip install --upgrade pip
         pip install -r backend/requirements.txt
