ci: add dummy DATABASE_URL for backend tests
Provide a dummy PostgreSQL connection string to the CI environment to
enable backend tests to run correctly.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r backend/requirements.txt
     - name: Run backend tests
+      env:
+        DATABASE_URL: postgresql://user:password@localhost:5432/testdb # Dummy URL for CI
       run: |
         pytest backend/app
     - name: Check backend code format with Black
