--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.2.9",
     "@mui/icons-material": "^7.3.8",
     "@mui/material": "^7.3.8",
+    "@mui/x-charts": "^8.27.0",
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
     "react": "^19.2.0",
